--- a/deploy/kubernetes/base/controller-deployment.yaml
+++ b/deploy/kubernetes/base/controller-deployment.yaml
@@ -16,6 +16,8 @@ spec:
       app.kubernetes.io/instance: kustomize
   template:
     metadata:
+      annotations:
+        iam.amazonaws.com/role: arn:aws:iam::701490739577:role/efs-csi
       labels:
         app: efs-csi-controller
         app.kubernetes.io/name: aws-efs-csi-driver
@@ -31,7 +33,7 @@ spec:
         - name: efs-plugin
           securityContext:
             privileged: true
-          image: "amazon/aws-efs-csi-driver:v1.2.0"
+          image: "405753365262.dkr.ecr.us-east-1.amazonaws.com/kubernetes-csi/aws-efs-csi-driver:v1.2.0-tinder3"
           imagePullPolicy: IfNotPresent
           args:
             - --endpoint=$(CSI_ENDPOINT)
@@ -58,7 +60,7 @@ spec:
             periodSeconds: 10
             failureThreshold: 5
         - name: csi-provisioner
-          image: public.ecr.aws/eks-distro/kubernetes-csi/external-provisioner:v2.0.3-eks-1-18-1
+          image: 405753365262.dkr.ecr.us-east-1.amazonaws.com/kubernetes-csi/external-provisioner:v2.0.3-eks-1-18-1
           args:
             - --csi-address=$(ADDRESS)
             - --v=5
@@ -71,7 +73,7 @@ spec:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
         - name: liveness-probe
-          image: public.ecr.aws/eks-distro/kubernetes-csi/livenessprobe:v2.1.0-eks-1-18-1
+          image: 405753365262.dkr.ecr.us-east-1.amazonaws.com/kubernetes-csi/livenessprobe:v2.1.0-eks-1-18-1
           args:
             - --csi-address=/csi/csi.sock
             - --health-port=9808
